# blint

./: .flake8  .gitignore  AGENTS.md  AI-DECLARATION.md  Dockerfile  Info.plist  LICENSE  README.md  SECURITY.md  SKILL.md  blint.icns  build-mac.sh  build.ps1  build.sh  file_version_info.txt  pyoxidizer.bzl  pyproject.toml  pytest.ini
.builds/: Info.plist  alpine.yml  alpine.yml.bak  ci.yml  ubuntu.yml
.github/workflows/: CI-BLINT-BENCH-80.yml  alpine.yml  alpine.yml.bak  bintests.yml  linux.yml  mac.yml  mac.yml.bak  publish.yml  pytests.yml  win.yml
blint/: analysis.py  android.py  binary.py  checks.py  cli.py  config.py  db.py  logger.py  rules.yml  sbom.py  utils.py
blint/contrib/: comparer.py
blint/cyclonedx/: README.md  spdx.py  spec.py
blint/data/: android-services.json  rules.yml  trackers.json
blint/data/annotations/: review_apple_local_privesc_mie.yml  review_entries_generic.yml  review_entries_pe.yml  review_exe_go.yml  review_functions_generic.yml  review_imports_pe.yml  review_ios_fingerprint.yml  review_ios_masvs.yml  review_ios_privacy_access.yml  review_ios_privacy_posture.yml  review_ios_sidechannel.yml  review_methods_android.yml  review_methods_generic.yml  review_methods_gnu.yml  review_methods_go.yml  review_methods_mips.yml  review_methods_pe.yml  review_methods_rust.yml  review_monero_generic.yml  review_monero_go.yml  review_monero_rust  review_rootkits_win.yml  review_rpc_win.yml  review_symbols_antiforensic.yml  review_symbols_generic.yml  review_symbols_hooka.yml  review_symbols_macho.yml
blint/lib/: analysis.py  android.py  android_services.py  binary.py  callgraph_kpi.py  checks.py  dalvik.py  dalvik_callgraph.py  dalvik_cfg.py  dalvik_dataflow.py  dalvik_review.py  dalvik_semantics.py  disassembler.py  function_reviews.py  indicators.py  ios.py  macho_objc.py  review_runner.py  review_utils.py  runners.py  sbom.py  utils.py
blint/lib/callgraph/: __init__.py  algorithms.py  api.py  canon.py  command.py  fingerprint.py  match.py  model.py  rusi.py
blint/lib/ml/: analysis.py
docs/: CALLGRAPH.md  CALLGRAPH_MATCH.md  CUSTOM_PROPERTIES.md  DISASSEMBLE.md  METADATA.md  RULES.md
tests/: test_analysis.py  test_android.py  test_android_services.py  test_binary.py  test_blintdb.py  test_blintdb_small_corpus_script.py  test_blintdb_utils.py  test_callgraph_algorithms.py  test_callgraph_api.py  test_callgraph_canon.py  test_callgraph_command.py  test_callgraph_fingerprint.py  test_callgraph_kpi.py  test_callgraph_match.py  test_cli.py  test_dalvik.py  test_dalvik_callgraph.py  test_dalvik_cfg.py  test_dalvik_dataflow.py  test_dalvik_review.py  test_dalvik_semantics.py  test_db_callgraph.py  test_disassembler.py  test_ios.py  test_ios_privacy_rules.py  test_macho_objc.py  test_runners.py  test_sbom_blintdb.py  test_sbom_ios.py  test_utils.py
tests/data/: adversarial_ops.wasm  apk-features.txt  apk-manifest.txt  apk-permissions.txt  apk-summary.txt  blintdb-small-corpus.json  bulk_memory.wasm  complex_flow.wasm  dos_growth_loop.wasm  exa-elf.json  netstat-elf.json  ngrok-elf.json
tests/data/callgraph-kpi/: wasm-tools-1.247.0-baseline.json  wasm-tools-1.247.0-labels.json
tests/data/callgraph-match/: wasm-tools-1.247.0-baseline.json
tests/ml/: test_analysis.py
tests/scripts/: benchmark_register_parsing.py  callgraph_kpi_baseline.py  callgraph_match_kpi.py  validate_blintdb_small_corpus.py
