[tool.poetry]
name = "blint"
version = "2.1.6"
description = "Linter and SBOM generator for binary files."
authors = ["Prabhu Subramanian <prabhu@appthreat.com>", "Caroline Russell <caroline@appthreat.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/OWASP-dep-scan/blint"
repository = "https://github.com/OWASP-dep-scan/blint"
keywords = ["linter", "binary", "security", "sast"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Utilities",
    "Topic :: Security",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
include = ["blint/data/*.yml"]

[tool.poetry.urls]
"CI" = "https://github.com/AppThreat/blint/actions"

[tool.poetry.scripts]
blint = 'blint.cli:main'

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
lief = "^0.14.0"
rich = "^13.7.0"
PyYAML = "^6.0.1"
defusedxml = "^0.7.1"
pydantic = {version = "^2.6.0", extras = ["email"]}
orjson = "^3.10.1"
symbolic = "10.2.1"
ar = "^0.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
flake8 = "^7.0.0"
pylint = "^3.0.0"
pytest-cov = "^4.0.0"
pyinstaller = "^6.3.0"

[tool.black]
line-length = 99

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--verbose --cov-append --cov-report term --cov blint"

[tool.pylint]
generated-members = ["lief", "orjson"]
ignore-paths = ["blint/cyclonedx/*", "tests/*"]
# Let's not fuss about long strings
ignore-long-lines = "[r|f]\""
disable = ["missing-module-docstring", "logging-fstring-interpolation"]

[tool.pylint.format]
max-line-length = 99

[tool.pylint.design]
max-args = 6
max-nested-blocks = 6
