[tool.poetry]
name = "blint"
version = "2.3.2"
description = "Linter and SBOM generator for binary files."
authors = ["Prabhu Subramanian <prabhu@appthreat.com>", "Caroline Russell <caroline@appthreat.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/owasp-dep-scan/blint"
repository = "https://github.com/owasp-dep-scan/blint"
keywords = ["linter", "binary", "security", "sast"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Utilities",
    "Topic :: Security",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
include = ["blint/data/*.yml"]

[tool.poetry.urls]
"CI" = "https://github.com/owasp-dep-scan/blint/actions"

[tool.poetry.scripts]
blint = 'blint.cli:main'

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
lief = "^0.16.4"
rich = "^13.9.4"
PyYAML = "^6.0.2"
defusedxml = "^0.7.1"
pydantic = {extras = ["email"], version = "^2.10.6"}
orjson = "^3.10.15"
symbolic = "10.2.1"
ar = "^0.9.1"
custom-json-diff = "^2.1.5"
appdirs = "^1.4.4"
apsw = "^3.49.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^25.1.0"
flake8 = "^7.1.2"
pylint = "^3.3.4"
pytest-cov = "^6.0.0"
pyinstaller = "^6.12.0"


[tool.poetry.group.db.dependencies]
oras = "^0.2.25"

[tool.black]
line-length = 99

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--verbose --cov-append --cov-report term --cov blint"

[tool.pylint]
generated-members = ["lief", "orjson"]
ignore-paths = ["blint/cyclonedx/*", "tests/*"]
# Let's not fuss about long strings
ignore-long-lines = "[r|f]\""
disable = ["missing-module-docstring", "logging-fstring-interpolation"]

[tool.pylint.format]
max-line-length = 99

[tool.pylint.design]
max-args = 6
max-nested-blocks = 6
