[project]
name = "blint"
version = "3.1.3"
description = "Linter and SBOM generator for binary files."
authors = [
    {name= "Team AppThreat", email = "cloud@appthreat.com"},
]
dependencies = [
    "lief>=0.17.4",
    "rich>=15.0.0",
    "PyYAML>=6.0.3",
    "defusedxml>=0.7.1",
    "pydantic[email]>=2.13.3",
    "orjson>=3.11.7",
    "multi-demangle>=1.0.3",
    "ar>=1.0.1",
    "custom-json-diff>=2.1.6",
    "appdirs>=1.4.4",
    "apsw>=3.53.0.0",
    "packageurl-python>=0.17.6",
    "oras>=0.2.41",
    "wasm-tools>=1.0.3",
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/owasp-dep-scan/blint"
repository = "https://github.com/owasp-dep-scan/blint"
keywords = ["linter", "binary", "security", "sast"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Utilities",
    "Topic :: Security",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10,<3.15"
include = ["blint/data/*.yml"]

[project.urls]
"CI" = "https://github.com/owasp-dep-scan/blint/actions"

[project.scripts]
blint = 'blint.cli:main'

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "black>=26.3.1",
    "flake8>=7.3.0",
    "pylint>=4.0.5",
    "pytest-cov>=7.1.0",
    "pyinstaller>=6.19.0"
]

[tool.black]
line-length = 99

[tool.poetry.group.extended.dependencies]
nyxstone = "^0.1.1"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--verbose --cov-append --cov-report term --cov blint"

[tool.pylint]
generated-members = ["lief", "orjson"]
ignore-paths = ["blint/cyclonedx/*", "tests/*"]
# Let's not fuss about long strings
ignore-long-lines = "[r|f]\""
disable = ["missing-module-docstring", "logging-fstring-interpolation"]

[tool.pylint.format]
max-line-length = 99

[tool.pylint.design]
max-args = 6
max-nested-blocks = 6
